<resources>
    <string name="app_name">Quiz</string>
    <string name="head_text">Quiz</string>
    <string name="welcome_text">Welcome!</string>
    <string name="enterName_text">Write your name here</string>
    <string name="enterName_hint_text">What`s your name?</string>
    <string name="startButton_text">START</string>
    <string name="whatCountry_text">What country does this flag below?</string>
    <string name="apple">Apple</string>
    <string name="submit">SUBMIT</string>
    <string name="finish_quiz_text">FINISH</string>
    <string name="submit_text">SUBMIT</string>
    <string name="result_text">Result</string>
    <string name="finish_text">FINISH</string>
</resources>