<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_text"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="35dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#F6D634"
                android:textStyle="bold"
                android:text="@string/welcome_text"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#85837A"
                android:textStyle="bold"
                android:text="@string/enterName_text"
                android:textSize="17sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterName_hint_text"
                    android:textColor="@android:color/holo_purple"
                    android:textColorHint="#A459AC"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E44690"
                android:text="@string/startButton_text"
                android:layout_marginTop="10dp">

            </Button>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>